added pixel event

--- a/smartly/index.html
+++ b/smartly/index.html
@@ -24,6 +24,9 @@
   <!-- End Facebook Pixel Code -->
 </head>
 <body>
+        <script>
+                fbq('track', 'ViewContent');
+              </script>
     <h1>Wolf's test webpage for Smartly</h1>
     <p>Here is some text, soon there will also be a button somewhere.</p>
 </body>
